testament/tests/shouldfail/toutputsub.nim
discard """
  outputsub: "something else"
  targets: "c"
"""

echo "Hello World!"
